# KAEM

./: .gitattributes  .gitignore  .lfsconfig  LICENSE  Makefile  Manifest.toml  Project.toml  README.md  cnn_config.ini  config.ini  darcy.jl  darcy_config.ini  environment.yml  img_config.ini  jobs.txt  main.jl  main_importance.jl  main_thermodynamic.jl  nist.jl  nist_config.ini  plot_prior.jl  plt_grid_img.py  pyproject.toml  run.sh  run_tests.sh  text_config.ini  train_from_checkpoint.jl
PDE_data/darcy_32/: plot_test.py
benches/: ITS_single.jl  MALA_steps.jl  MALA_steps.jl.txt  latent_dim.jl  latent_dim.jl.txt  prior_steps.jl  run_benchmarks.sh  svhn_prior_config.ini  temperatures.jl
benches/results/: ITS_single.csv  latent_dim.csv  prior_steps.csv  temperatures.csv
benchmarking/: MALA_steps.jl  MALA_steps.jl.txt  benchmark_conf.ini  latent_dim.jl  latent_dim.jl.txt  run_benchmarks.sh  temperatures.jl
config/: celeba_config.ini  celeba_pang_config.ini  cifar_config.ini  cifar_pang_config.ini  cnn_config.ini  darcy_flow_config.ini  darcy_perm_config.ini  nist_config.ini  svhn_config.ini  svhn_pang_config.ini  text_config.ini
logs/MNIST_1/: generated_images.h5  loss.csv  real_images.h5
plotting/: plot.sh
scripts/: init.sh  run_benchmarks.sh  run_plots.sh  run_sequential_training.sh  run_tests.sh
setup/: julia_reqs.jl  python_reqs.py  setup.sh
src/: utils.jl
src/T-KAM/: ULA.jl  (+15 more)
tests/: basis_tests.jl  function_tests.jl  lkhood_tests.jl  model_tests.jl  prior_tests.jl  resampler_tests.jl  sampling_tests.jl  spline_tests.jl  test_conf.ini  thermo_tests.jl
(+342 files in other folders)
